--- a/src/components/inputComponent/styles.module.scss
+++ b/src/components/inputComponent/styles.module.scss
@@ -1,59 +1,60 @@
-.container{
+.emailaddres{
+  width: 320px;
+  border: 1px solid gray;
+  border-radius: 4px;
+  padding: 15px 10px;
+}
+.label{
+  font-size: 14px;
+  color: gray;
+}
+.password{
+  width: 320px;
+  position: relative;
+  border: 1px solid gray;
+  border-radius: 4px;
+  padding: 15px 10px;
+}
+.icon-yea{
+  position: absolute;
+  right: 5%;
+  top:65%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.button{
+  width: 320px;
+  padding: 15px;
+  border: none;
+  background: #1E90FF;
+  border-radius: 4px;
+  font-size: 15px;
+  color: white;
+}
+.error{
+  color:red;
+  font-size: 19px;
+}
+.form-container{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 10px;
-  .label{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+}
+.box{
+  display: flex;
+  align-items: center;
+}
+.Forgat{
+  margin: 0 0 0 110px;
+  color: black;
+  font-weight: 1000;
+}
 
-  }
-  .EmailAddress{
-    width: 330px;
-    border: 1px solid  #1B2B41B8;
-    border-radius:4px ;
-    padding: 15px;
-    cursor: pointer;
-  }
-  .passwordbloc{
-    width: 330px;
-    border: 1px solid  #1B2B41B8;
-    border-radius:4px ;
-    padding: 15px;
-    cursor: pointer;
-  }
-  .password{
-    border: none;
-  }
- .title{
-    font-size: 15px;
-    color:#1B2B41B8;
-  }
-  .Add{
-    width: 330px;
-    color: white;
-    font-size: 20px;
-    border: none;
-    padding: 13px;
-    border-radius: 4px;
-    background: rgba(22, 118, 243, 1);
-    cursor: pointer;
-  }
-  .error{
-    color: red;
-    font-weight: 800;
-    margin: 0 0 0 2px;
-  }
-  .EmailAddress:hover{
-    border: 1px solid #1E90FF;
-    transition-duration: 15cek;
-  }
-  .passwordbloc:hover, .passwordbloc + .title  {
-    border: 1px solid #1E90FF;
-    color: #1E90FF;
-    transition-duration: 15cek;
+.emailaddres:focus {
+  border: 1.5px solid #1E90FF;
+}
 
-  }
-
+.emailaddres:focus + .label {
+  color: #1E90FF;
 }
