--- a/src/components/signUpComponents/styles.module.scss
+++ b/src/components/signUpComponents/styles.module.scss
@@ -1,35 +1,60 @@
-.container{
+.emailaddres{
+  width: 320px;
+  border: 1px solid gray;
+  border-radius: 4px;
+  padding: 15px 10px;
+}
+.label{
+  font-size: 14px;
+  color: gray;
+}
+.password{
+  width: 320px;
+  position: relative;
+  border: 1px solid gray;
+  border-radius: 4px;
+  padding: 15px 10px;
+}
+.icon-yea{
+  position: absolute;
+  right: 5%;
+  top:65%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.button{
+  width: 320px;
+  padding: 15px;
+  border: none;
+  background: #1E90FF;
+  border-radius: 4px;
+  font-size: 15px;
+  color: white;
+}
+.error{
+  color:red;
+  font-size: 19px;
+}
+.form-container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+.box{
   display: flex;
   align-items: center;
-  flex-direction: column;
-  width: 400px;
-  margin: 0 auto;
-  gap: 20px;
-  .title{
-    font-size: 13px;
-    color: #696969;
-  }
-  .error{
-    color: red;
-  }
-  .input{
-    width: 330px;
-    padding: 15px 10px;
-    border: 1px solid gray;
+}
+.Forgat{
+  margin: 0 0 0 110px;
+  color: black;
+  font-weight: 1000;
+}
 
-    font-size: 15px;
-    border-radius:4px ;
-    cursor:  pointer;
-  }
-  .input:focus{
-    border: 2px solid #1E90FF;
-  }
-  .button{
-    width: 330px;
-    color: white;
-    background: #1E90FF;
-    padding: 15px;
-    border: none;
-    border-radius:4px;
-  }
+.emailaddres:focus {
+  border: 1.5px solid #1E90FF;
+}
+
+.emailaddres:focus + .label {
+  color: #1E90FF;
 }
